# memic-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/memic-sdk/: SKILL.md
.github/workflows/: ci.yml
src/memic/: __init__.py  _version.py  client.py  exceptions.py  types.py
tests/: __init__.py  test_client.py  test_integration.py
