[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memic"
dynamic = ["version"]
description = "Python SDK for the Memic Context Engineering API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Memic", email = "support@memic.ai" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["memic", "rag", "context-engineering", "embeddings", "semantic-search"]
dependencies = [
    "requests>=2.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://memic.ai"
Documentation = "https://docs.memic.ai"
Repository = "https://github.com/memic-ai/memic-python"
Changelog = "https://github.com/memic-ai/memic-python/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/memic/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
